# traceui

./: .gitignore  AGENTS.md  LICENSE  README.md  adblib.py  gui.py  pyproject.toml  run.sh  traceui.py  traceui_cli.py  update-artifacts.sh
core/: adb_thread.py  capture_config.py  config.py  frame_selection.py  logger_config.py  page_navigation.py  proc_options.json  traceimport.py
core/widgets/: base.py  connect_device.py  fast_forward.py  frame_selection.py  framerange.py  postproc.py  replay.py  replay_settings.py  trace.py  trace_importer.py
plugins/: fastforward.py  gfxreconstruct.py  patrace.py  plugins_interface.md
